# ecg_simulation

./: LICENSE  pyproject.toml
src/: generating.py  utility.py
